--- a/simuwater/src/main/resources/application.properties
+++ b/simuwater/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/simuwater?serverTimezone=Europe/Lisbon&useLegacyDatetimeCode=false
-spring.datasource.username=root
-spring.datasource.password=fpclr3961
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:www.remotemysql.com}:3306/WgOLBLunbB?serverTimezone=Europe/Lisbon&useLegacyDatetimeCode=false
+spring.datasource.username=WgOLBLunbB
+spring.datasource.password=wVw5p8vvHn
 spring.datasource.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.output.ansi.enabled=ALWAYS
